Fixed missing hyphen on the `whitespace` property.

--- a/src/main.less
+++ b/src/main.less
@@ -20,7 +20,7 @@
    * overflowing text with an ellipsis
    */
   &.-truncate {
-    whitespace: nowrap;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
